--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 
-<body class="bg-[#f9fbfe] font-sans p-6 transition-colors duration-300" id="body">
+    <div class="flex flex-row items-center justify-center mb-6 mt-5 gap-4">
+        <h1 class="main-heading mr-4">To Do List</h1>
+        <img src="https://thumbs.dreamstime.com/b/todo-list-13838958.jpg" alt="To Do List" class="h-16 rounded">
+    </div>
 
-    <div class="flex flex-col md:flex-row gap-4 mb-6 items-center justify-between">
+    <div class="flex flex-col md:flex-row gap-4 mb-6 items-center justify-between ml-4 mr-4">
 
         <input
             id="newTaskText"
@@ -34,7 +37,7 @@
 
     </div>
 
-    <div class="flex flex-col md:flex-row gap-4">
+    <div class="flex flex-col md:flex-row gap-4 ml-4 mr-4">
 
         <div class="column bg-white border border-[#D5D2D2] rounded-lg flex-1 p-4 flex flex-col" data-status="todo">
             <h2 class="text-xl font-semibold mb-4">
@@ -64,7 +67,7 @@
 
     </div>
 
-    <div class="mt-6 flex gap-4 items-center">
+    <div class="mt-6 flex gap-4 items-center ml-4 mr-4">
         <button id="saveTasksBtn" class="px-6 py-3 bg-[#4c63b6] text-white rounded hover:bg-[#3b4a9c] transition">
             Save Tasks
         </button>
