--- a/static/style.css
+++ b/static/style.css
@@ -83,6 +83,16 @@ body.dark .task {
     color: #555;
 }
 
+.main-heading{
+    font-weight: 500;
+    text-align: center;
+    font-size: 45px;
+
+}
+
+.image{
+    height :45px;
+}
 body.dark .task .due-date {
     color: #a1a1aa;
 }
